--- a/ubuntu/server_jre/Dockerfile
+++ b/ubuntu/server_jre/Dockerfile
@@ -1,28 +1,9 @@
-FROM ubuntu:latest
-MAINTAINER SgrAlpha <admin@mail.sgr.io>
+FROM sgrio/java:server_jre_8_ubuntu
+MAINTAINER joyuan <enginezy@gmail.com>
 
-ENV DEBIAN_FRONTEND=noninteractive \
-    TZ=Asia/Shanghai \
-    JAVA_HOME=/usr/lib/jvm/java-8-oracle \
-    JRE_HOME=/usr/lib/jvm/java-8-oracle/jre
- 
-RUN VERSION=8 && \
-    UPDATE=202 && \
-    BUILD=08 && \
-    SIG=1961070e4c9b4e26a04e7f5a083f551e && \
-    apt-get update && apt-get dist-upgrade -y && \
-    apt-get install apt-utils ca-certificates curl -y --no-install-recommends && \
-    curl --silent --location --retry 3 --cacert /etc/ssl/certs/GeoTrust_Global_CA.pem \
-        --header "Cookie: oraclelicense=accept-securebackup-cookie;" \
-        http://download.oracle.com/otn-pub/java/jdk/"${VERSION}"u"${UPDATE}"-b"${BUILD}"/"${SIG}"/server-jre-"${VERSION}"u"${UPDATE}"-linux-x64.tar.gz \
-        | tar xz -C /tmp && \
-    mkdir -p /usr/lib/jvm && mv /tmp/jdk1.${VERSION}.0_${UPDATE} "${JAVA_HOME}" && \
-    echo "${TZ}" > /etc/timezone &&\
-    ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime &&\
-    apt install -y tzdata &&\
-    apt-get autoclean && apt-get --purge -y autoremove && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
-    update-alternatives --install "/usr/bin/java" "java" "${JRE_HOME}/bin/java" 1 && \
-    update-alternatives --install "/usr/bin/javac" "javac" "${JAVA_HOME}/bin/javac" 1 && \
-    update-alternatives --set java "${JRE_HOME}/bin/java" && \
-    update-alternatives --set javac "${JAVA_HOME}/bin/javac"
+ENV TZ=Asia/Shanghai
+RUN echo "${TZ}" > /etc/timezone \
+    && ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime \
+    && apt update \
+    && apt install -y tzdata \
+    && rm -rf /var/lib/apt/lists/*
