--- a/ubuntu/server_jre/Dockerfile-jdk
+++ b/ubuntu/server_jre/Dockerfile-jdk
@@ -1,1 +1,9 @@
+FROM sgrio/java:jdk_8_ubuntu
+MAINTAINER joyuan <enginezy@gmail.com>
 
+ENV TZ=Asia/Shanghai
+RUN echo "${TZ}" > /etc/timezone \
+    && ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime \
+    && apt update \
+    && apt install -y tzdata \
+    && rm -rf /var/lib/apt/lists/*
